--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "google-maps-react": "^2.0.6",
     "mongoose": "^5.9.27",
     "per-env": "^1.0.2",
     "react": "^16.13.1",
