--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "firebase": "^8.2.3",
+    "framer-motion": "^3.2.1",
     "google-maps-react": "^2.0.6",
     "mongoose": "^5.9.27",
     "per-env": "^1.0.2",
